commit 6 Refactoring + additional CRUD options